--- a/src/gtworld.html
+++ b/src/gtworld.html
@@ -654,8 +654,7 @@
                     Conclusion
                 </h3>
 
-                <p
-                    class="conclusion-details font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:my-8">
+                <p class="conclusion-details font-sf text-primary text-sm lg:text-base xl:text-lg 2xl:text-xl sm:leading-6 lg:leading-7 xl:leading-8 2xl:leading-9 lg:my-8">
                     The focus of this redesign was centered around delivering an all-new experience on the GTBank
                     application. Based on the
                     research and feedback I had gathered, it was certain that the UI of the app was one of the major
