--- a/src/about me.html
+++ b/src/about me.html
@@ -335,7 +335,7 @@
             <div class="tools-container flex space-x-10 py-10">
                 <div class="left-container">
                     <div class="floating-circle w-auto flex justify-center items-center">
-                        <svg class="w-28 sm:w-32 spin" viewBox="0 0 199 192.5" fill="none"
+                        <svg class="w-20 sm:w-24 spin" viewBox="0 0 199 192.5" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M42.8722 169.863L43.4213 170.311L39.8269 174.713L37.1547 172.531L37.5583 172.036L39.6814 173.77L40.9168 172.257L38.9676 170.665L39.3662 170.177L41.3154 171.769L42.8722 169.863Z"
@@ -503,7 +503,7 @@
                             <circle cx="99.008" cy="96.2397" r="66.1081" stroke="#454545" stroke-width="0.288053" />
                         </svg>
 
-                        <svg class="w-6 sm:w-8 absolute" viewBox="0 0 40 40" fill="none"
+                        <svg class="w-4 sm:w-6 absolute" viewBox="0 0 40 40" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M33.4997 15.3667C30.483 15.3667 29.2497 13.2334 30.7497 10.6167C31.6163 9.10006 31.0997 7.16672 29.583 6.30006L26.6997 4.65006C25.383 3.86672 23.683 4.33339 22.8997 5.65006L22.7163 5.96672C21.2163 8.58339 18.7497 8.58339 17.233 5.96672L17.0497 5.65006C16.2997 4.33339 14.5997 3.86672 13.283 4.65006L10.3997 6.30006C8.88301 7.16672 8.36634 9.11672 9.23301 10.6334C10.7497 13.2334 9.51634 15.3667 6.49967 15.3667C4.76634 15.3667 3.33301 16.7834 3.33301 18.5334V21.4667C3.33301 23.2001 4.74967 24.6334 6.49967 24.6334C9.51634 24.6334 10.7497 26.7667 9.23301 29.3834C8.36634 30.9001 8.88301 32.8334 10.3997 33.7001L13.283 35.3501C14.5997 36.1334 16.2997 35.6667 17.083 34.3501L17.2663 34.0334C18.7663 31.4167 21.233 31.4167 22.7497 34.0334L22.933 34.3501C23.7163 35.6667 25.4163 36.1334 26.733 35.3501L29.6163 33.7001C31.133 32.8334 31.6497 30.8834 30.783 29.3834C29.2663 26.7667 30.4997 24.6334 33.5163 24.6334C35.2497 24.6334 36.683 23.2167 36.683 21.4667V18.5334C36.6663 16.8001 35.2497 15.3667 33.4997 15.3667ZM19.9997 25.4167C17.0163 25.4167 14.583 22.9834 14.583 20.0001C14.583 17.0167 17.0163 14.5834 19.9997 14.5834C22.983 14.5834 25.4163 17.0167 25.4163 20.0001C25.4163 22.9834 22.983 25.4167 19.9997 25.4167Z"
@@ -514,7 +514,7 @@
 
                 <div class="right-container flex space-x-3">
                     <div class="vertical-line-and-circle relative h-full w-5 flex items-center">
-                        <div class="vertical-line w-px h-full">
+                        <div class="vertical-line bg-verticaldark w-px h-full">
                         </div>
 
                         <div class="circle-cont absolute h-full space-y-10 -ml-2.5 z-50">
@@ -630,7 +630,7 @@
             <div class="works-container flex space-x-10 py-10">
                 <div class="left-container">
                     <div class="floating-circle w-auto flex justify-center items-center">
-                        <svg class="w-28 sm:w-32 spin" viewBox="0 0 199 192.5" fill="none"
+                        <svg class="w-20 sm:w-24 spin" viewBox="0 0 199 192.5" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M42.8722 169.863L43.4213 170.311L39.8269 174.713L37.1547 172.531L37.5583 172.036L39.6814 173.77L40.9168 172.257L38.9676 170.665L39.3662 170.177L41.3154 171.769L42.8722 169.863Z"
@@ -798,7 +798,8 @@
                             <circle cx="99.008" cy="96.2397" r="66.1081" stroke="#454545" stroke-width="0.288053" />
                         </svg>
 
-                        <svg class="w-6 sm:w-8 absolute" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg class="w-4 sm:w-6 absolute" viewBox="0 0 40 40" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd"
                                 d="M7.56634 3.33325H13.1997C15.5497 3.33325 17.433 5.24992 17.433 7.60158V13.2833C17.433 15.6499 15.5497 17.5499 13.1997 17.5499H7.56634C5.23301 17.5499 3.33301 15.6499 3.33301 13.2833V7.60158C3.33301 5.24992 5.23301 3.33325 7.56634 3.33325ZM7.56634 22.4494H13.1997C15.5497 22.4494 17.433 24.3511 17.433 26.7177V32.3994C17.433 34.7494 15.5497 36.6661 13.1997 36.6661H7.56634C5.23301 36.6661 3.33301 34.7494 3.33301 32.3994V26.7177C3.33301 24.3511 5.23301 22.4494 7.56634 22.4494ZM32.4331 3.33325H26.7998C24.4498 3.33325 22.5665 5.24992 22.5665 7.60158V13.2833C22.5665 15.6499 24.4498 17.5499 26.7998 17.5499H32.4331C34.7665 17.5499 36.6665 15.6499 36.6665 13.2833V7.60158C36.6665 5.24992 34.7665 3.33325 32.4331 3.33325ZM26.7998 22.4494H32.4331C34.7665 22.4494 36.6665 24.3511 36.6665 26.7177V32.3994C36.6665 34.7494 34.7665 36.6661 32.4331 36.6661H26.7998C24.4498 36.6661 22.5665 34.7494 22.5665 32.3994V26.7177C22.5665 24.3511 24.4498 22.4494 26.7998 22.4494Z"
                                 fill="white" />
@@ -807,43 +808,18 @@
                     </div>
                 </div>
 
-                <div class="right-container flex space-x-3">
-                    <div class="vertical-line-and-circle relative h-full w-5 flex items-center">
+                <div class="right-container flex space-x-5">
+                    <div class="vertical-line-and-circle relative bg-verticaldark h-full w-5 flex items-center">
                         <div class="vertical-line w-px h-full">
                         </div>
 
-                        <div class="circle-cont absolute h-full space-y-10 -ml-2.5 z-50">
+                        <div class="circle-cont absolute h-full flex flex-col -ml-2.5 z-50">
                             <svg class="w-5 mt-5" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <circle cx="11" cy="11" r="6" fill="#525252" />
                                 <circle cx="11" cy="11" r="10.5" stroke="#525252" />
                             </svg>
 
-                            <svg class="w-5" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <circle cx="11" cy="11" r="6" fill="#525252" />
-                                <circle cx="11" cy="11" r="10.5" stroke="#525252" />
-                            </svg>
-
-                            <svg class="w-5" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <circle cx="11" cy="11" r="6" fill="#525252" />
-                                <circle cx="11" cy="11" r="10.5" stroke="#525252" />
-                            </svg>
-
-                            <svg class="w-5" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <circle cx="11" cy="11" r="6" fill="#525252" />
-                                <circle cx="11" cy="11" r="10.5" stroke="#525252" />
-                            </svg>
-
-                            <svg class="w-5" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <circle cx="11" cy="11" r="6" fill="#525252" />
-                                <circle cx="11" cy="11" r="10.5" stroke="#525252" />
-                            </svg>
-
-                            <svg class="w-5" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <circle cx="11" cy="11" r="6" fill="#525252" />
-                                <circle cx="11" cy="11" r="10.5" stroke="#525252" />
-                            </svg>
-
-                            <svg class="w-5" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg class="w-5 mt-6" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <circle cx="11" cy="11" r="6" fill="#525252" />
                                 <circle cx="11" cy="11" r="10.5" stroke="#525252" />
                             </svg>
@@ -866,60 +842,99 @@
                     </div>
 
 
-                    <div class="tools-list h-full pt-5 space-y-10">
-                        <p
-                            class="figma font-sf text-sm lg:text-base xl:text-lg 2xl:text-xl leading-5  lg:pb-10 text-primary">
-                            Figma
-                        </p>
+                    <div class="works-list h-full pt-5 space-y-10">
+                        <div class="vaulthill space-y-3">
+                            <h3
+                                class="vaulthill-header font-sf text-sm lg:text-base xl:text-lg 2xl:text-xl leading-5  lg:pb-10 text-primary">
+                                Vault Hill, United Kingdom
+                            </h3>
 
-                        <p
-                            class="figma font-sf text-sm lg:text-base xl:text-lg 2xl:text-xl leading-5  lg:pb-10 text-primary">
-                            Adobe XD
-                        </p>
+                            <p class="role font-sf text-primary text-xs lg:text-sm">
+                                Lead UI/UX Designer, June 2021 (Remote).
+                            </p>
 
-                        <p
-                            class="figma font-sf text-sm lg:text-base xl:text-lg 2xl:text-xl leading-5  lg:pb-10 text-primary">
-                            Adobe Photoshop
-                        </p>
+                            <ul class="font-sf text-primary text-tiny lg:text-xs list-disc space-y-1 ml-3">
+                                <li>Transitioned into designing experience on the Metaverse.</li>
+                                <li>Redesigned the companies website.</li>
+                                <li>Designed project Whitepaper and Pitch decks that have won several grants and
+                                    partnerships.</li>
+                                <li>Designing mobile and VR headset experience.</li>
+                            </ul>
+                        </div>
 
-                        <p
-                            class="figma font-sf text-sm lg:text-base xl:text-lg 2xl:text-xl leading-5  lg:pb-10 text-primary">
-                            Adoble Illustrator
-                        </p>
+                        <div class="neggster space-y-3">
+                            <h3
+                                class="neggster-header font-sf text-sm lg:text-base xl:text-lg 2xl:text-xl leading-5  lg:pb-10 text-primary">
+                                Neggster, Delaware, USA
+                            </h3>
 
-                        <p
-                            class="figma font-sf text-sm lg:text-base xl:text-lg 2xl:text-xl leading-5  lg:pb-10 text-primary">
-                            Adobe Premeir pro
-                        </p>
+                            <p class="role font-sf text-primary text-xs lg:text-sm">
+                                Lead UI/UX Designer, December 2020 (Remote).
+                            </p>
 
-                        <p
-                            class="figma font-sf text-sm lg:text-base xl:text-lg 2xl:text-xl leading-5  lg:pb-10 text-primary">
-                            Adobe After Effect
-                        </p>
+                            <ul class="font-sf text-primary text-tiny lg:text-xs list-disc space-y-1 ml-3">
+                                <li>Designed first level prototypes for web and mobile experience.</li>
+                                <li>Created visuals for pitch deck that won up to $150k.</li>
+                                <li>Coordinated a team of designers and developers to launch first build.</li>
+                                <li>Designed mobile application, web application and website.</li>
+                            </ul>
+                        </div>
 
-                        <p
-                            class="figma font-sf text-sm lg:text-base xl:text-lg 2xl:text-xl leading-5  lg:pb-10 text-primary">
-                            Google Services
-                        </p>
+                        <div class="outpost space-y-3">
+                            <h3
+                                class="outpost-header font-sf text-sm lg:text-base xl:text-lg 2xl:text-xl leading-5  lg:pb-10 text-primary">
+                                Outpost Health, Canada
+                            </h3>
 
-                        <p
-                            class="figma font-sf text-sm lg:text-base xl:text-lg 2xl:text-xl leading-5  lg:pb-10 text-primary">
-                            Notion
-                        </p>
+                            <p class="role font-sf text-primary text-xs lg:text-sm">
+                                Product Designer, April 2021 - June 2021 (Contract).
+                            </p>
 
-                        <p
-                            class="figma font-sf text-sm lg:text-base xl:text-lg 2xl:text-xl leading-5  lg:pb-10 text-primary">
-                            Miro
-                        </p>
+                            <ul class="font-sf text-primary text-tiny lg:text-xs list-disc space-y-1 ml-3">
+                                <li>Created health systems both on the web and on mobile.</li>
+                                <li>Created a governace system for the entire platform.</li>
+                                <li>Create customized icons for the product.</li>
+                            </ul>
+                        </div>
 
-                        <p
-                            class="figma font-sf text-sm lg:text-base xl:text-lg 2xl:text-xl leading-5  lg:pb-10 text-primary">
-                            Trello
-                        </p>
+                        <div class="tamkeem space-y-3">
+                            <h3
+                                class="tamkeem-header font-sf text-sm lg:text-base xl:text-lg 2xl:text-xl leading-5  lg:pb-10 text-primary">
+                                Tamkeem Technologies, Georgia
+                            </h3>
+
+                            <p class="role font-sf text-primary text-xs lg:text-sm">
+                                UI/UX Designer, January 2020 - December 2020 (Contract).
+                            </p>
+
+                            <ul class="font-sf text-primary text-tiny lg:text-xs list-disc space-y-1 ml-3">
+                                <li>I rebranded the companies flagship product.</li>
+                                <li>Created a design system for the mobile platform.</li>
+                            </ul>
+                        </div>
+
+                        <div class="hervest space-y-3">
+                            <h3
+                                class="hervest-header font-sf text-sm lg:text-base xl:text-lg 2xl:text-xl leading-5  lg:pb-10 text-primary">
+                                HerVest LLC, Nigeria
+                            </h3>
+
+                            <p class="role font-sf text-primary text-xs lg:text-sm">
+                                UI/UX Designer, November 2019 - June 2021 (Full time).
+                            </p>
+
+                            <ul class="font-sf text-primary text-tiny lg:text-xs list-disc space-y-1 ml-3">
+                                <li>Created the company’s first website and mobile application.</li>
+                                <li>Proposed several solutions around products</li>
+                                <li>Created design system for web and mobile application.</li>
+                                <li>Designed pitch deck that has won several grants and partnerships.</li>
+                                <li>Currently consulting for HerVest.</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-        </section> 
+        </section>
     </div>
 
     <footer class="bg-gray-200 dark:bg-black lg:px-16 xl:px-24 py-14 lg:py-24 2xl:py-28 mt-24">
