--- a/src/about me.html
+++ b/src/about me.html
@@ -627,8 +627,8 @@
         </section>
 
         <section class="works my-20 lg:my-28 xl:my-32">
-            <div class="works-container flex space-x-10 py-10">
-                <div class="left-container">
+            <div class="works-container flex space-x-10 py-10 border">
+                <div class="left-container border">
                     <div class="floating-circle w-auto flex justify-center items-center">
                         <svg class="w-20 sm:w-24 spin" viewBox="0 0 199 192.5" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
@@ -808,33 +808,33 @@
                     </div>
                 </div>
 
-                <div class="right-container flex space-x-5">
-                    <div class="vertical-line-and-circle relative bg-verticaldark h-full w-5 flex items-center">
-                        <div class="vertical-line w-px h-full">
+                <div class="right-container  border-red-500 flex space-x-5">
+                    <div class="vertical-line-and-circle  border-blue-500 relative bg-verticaldark h-full w-px flex items-center">
+                        <div class="vertical-line w-px  border-green-900 h-full">
                         </div>
 
-                        <div class="circle-cont absolute h-full flex flex-col -ml-2.5 z-50">
+                        <div class="circle-cont absolute h-full space-y-68 -ml-2.5 z-50">
                             <svg class="w-5 mt-5" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <circle cx="11" cy="11" r="6" fill="#525252" />
                                 <circle cx="11" cy="11" r="10.5" stroke="#525252" />
                             </svg>
 
-                            <svg class="w-5 mt-6" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg class="w-5 " viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <circle cx="11" cy="11" r="6" fill="#525252" />
                                 <circle cx="11" cy="11" r="10.5" stroke="#525252" />
                             </svg>
 
-                            <svg class="w-5" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg class="w-5 " viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <circle cx="11" cy="11" r="6" fill="#525252" />
                                 <circle cx="11" cy="11" r="10.5" stroke="#525252" />
                             </svg>
 
-                            <svg class="w-5" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg class="w-5 " viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <circle cx="11" cy="11" r="6" fill="#525252" />
                                 <circle cx="11" cy="11" r="10.5" stroke="#525252" />
                             </svg>
 
-                            <svg class="w-5" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <svg class="w-5 " viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <circle cx="11" cy="11" r="6" fill="#525252" />
                                 <circle cx="11" cy="11" r="10.5" stroke="#525252" />
                             </svg>
@@ -843,7 +843,7 @@
 
 
                     <div class="works-list h-full pt-5 space-y-10">
-                        <div class="vaulthill space-y-3">
+                        <div class="vaulthill h-64 border space-y-3">
                             <h3
                                 class="vaulthill-header font-sf text-sm lg:text-base xl:text-lg 2xl:text-xl leading-5  lg:pb-10 text-primary">
                                 Vault Hill, United Kingdom
@@ -862,7 +862,7 @@
                             </ul>
                         </div>
 
-                        <div class="neggster space-y-3">
+                        <div class="neggster h-64 border space-y-3">
                             <h3
                                 class="neggster-header font-sf text-sm lg:text-base xl:text-lg 2xl:text-xl leading-5  lg:pb-10 text-primary">
                                 Neggster, Delaware, USA
@@ -880,7 +880,7 @@
                             </ul>
                         </div>
 
-                        <div class="outpost space-y-3">
+                        <div class="outpost h-64 border space-y-3">
                             <h3
                                 class="outpost-header font-sf text-sm lg:text-base xl:text-lg 2xl:text-xl leading-5  lg:pb-10 text-primary">
                                 Outpost Health, Canada
@@ -897,7 +897,7 @@
                             </ul>
                         </div>
 
-                        <div class="tamkeem space-y-3">
+                        <div class="tamkeem h-64 border space-y-3">
                             <h3
                                 class="tamkeem-header font-sf text-sm lg:text-base xl:text-lg 2xl:text-xl leading-5  lg:pb-10 text-primary">
                                 Tamkeem Technologies, Georgia
@@ -913,7 +913,7 @@
                             </ul>
                         </div>
 
-                        <div class="hervest space-y-3">
+                        <div class="hervest h-64 border space-y-3">
                             <h3
                                 class="hervest-header font-sf text-sm lg:text-base xl:text-lg 2xl:text-xl leading-5  lg:pb-10 text-primary">
                                 HerVest LLC, Nigeria
